feat: adiciona novos endpoints para dashboards de usuários, instrutores e administradores; implementa lógica de recuperação de dados com base em roles
